Update Dockerfile with changes

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -14,7 +14,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 5000
 
 # Set environment variable
-ENV FLASK_APP vertexto.py
+ENV FLASK_APP main.py
 
 # Run the Flask application
 CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
